make cf edit entry float to fix the alignment bug in #19518

--- a/share/html/NoAuth/css/base/misc.css
+++ b/share/html/NoAuth/css/base/misc.css
@@ -90,6 +90,10 @@ div.edit-custom-field .cflabel {
     padding-right: 0.5em;
 }
 
+div.edit-custom-field .entry {
+    float: left;
+}
+
 .cflabel .name { font-weight: bold; }
 .cflabel .type { font-style: italic; }
 
